tests/tests/Other_tests/tests-Init-20-Array-20-10_Array_DeclaringArrayWithLengthAsVariable/pld-compile.txt
Error in input.c.
Error no viable alternative at input 'int array[length'. On position 5:11
   "	int array[length];"
               ^

1 error generated.

return code: 1
